# gold_digger

./: .actrc  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .mdformat.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .release-please-config.json  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  GEMINI.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  STANDARDS_COMPLIANCE_TASKS.md  TLS.md  TYPE_SAFETY_IMPROVEMENTS.md  WARP.md  build.rs  cargo-dist.toml  codecov.yml  copilot-setup-steps.yml  deny.ci.toml  deny.toml  dist-workspace.toml  justfile  renovate.json  rustfmt.toml  sbom.json  sbom.json.xml
.chglog/: CHANGELOG.tpl.md  config.yml
.cursor/rules/: rust-best-practices.mdc
.cursor/rules/project/: core-concepts.mdc
.github/: .coderabbit.yaml  CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  act-test-scenarios.yml  ci-performance-config.yml  copilot-instructions.md  dependabot.yml  error-reporting-config.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md  security_report.yml
.github/actions/: README.md
.github/actions/build-dependencies/: action.yml
.github/actions/error-reporter/: action.yml
.github/actions/run-clippy/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-security-tools/: action.yml
.github/scripts/: test-error-reporting.sh  validate-ci-workflows.sh
.github/workflows/: cargo-dist.yml  ci.yml  codeql.yml  coverage.yml  cross-platform.yml  docs.yml  release-please.yml  release.yml  rust-clippy.yml  rust.yml  security.yml  tls-integration.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  format-on-save.kiro.hook  manual-ci-check.kiro.hook  rust-docs-sync.kiro.hook  rust-test-coverage.kiro.hook
.kiro/specs/ci-cd-pipeline-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/documentation-setup/: design.md  requirements.md  tasks.md
.kiro/specs/gold-digger/: design.md  requirements.md  tasks.md
.kiro/specs/integration-testing-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/ltsv-export-support/: design.md  requirements.md  tasks.md
.kiro/specs/tls-rustls-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: pipeline.md  product.md  rust-best-practices.md  structure.md  tech.md
.kiro/steering/project/: core-concepts.md
docs/: book.toml  musl-compatibility.md
docs/src/: SUMMARY.md  introduction.md
docs/src/development/: api-reference.md  architecture.md  cargo-dist-completion-summary.md  contributing.md  release-notes-template.md  release-runbook.md  setup.md
docs/src/installation/: README.md  linux.md  macos.md  windows.md
docs/src/security/: best-practices.md  database-security.md  release-verification.md  tls-migration-guide.md  tls-ssl.md
docs/src/troubleshooting/: README.md  build-failures.md  ci-failures.md  connection-issues.md  dependency-failures.md  format-failures.md  performance.md  security-failures.md  test-failures.md  type-errors.md  type-safety.md
docs/src/usage/: configuration.md  examples.md  output-formats.md  quick-start.md
gold_digger/: Cargo.toml
gold_digger/src/: csv.rs  lib.rs  main.rs  tab.rs
project_spec/: requirements.md
src/: cli.rs  csv.rs  exit.rs  json.rs  lib.rs  main.rs  tab.rs  tls.rs
tests/: README.md  dependency_validation.rs  exit_codes.rs  lib.rs  tls_cli_integration.rs  tls_config_unit_tests.rs  tls_integration.rs  type_safety.rs
tests/snapshots/: tls_cli_integration__tls_cli_flag_tests__invalid_ca_file_content_error.snap  tls_cli_integration__tls_cli_flag_tests__nonexistent_ca_file_error.snap  tls_cli_integration__tls_cli_flag_tests__tls_help_options.snap  tls_cli_integration__tls_mutual_exclusion_tests__ca_file_and_allow_invalid_mutual_exclusion.snap  tls_cli_integration__tls_mutual_exclusion_tests__ca_file_and_skip_hostname_mutual_exclusion.snap  tls_cli_integration__tls_mutual_exclusion_tests__skip_hostname_and_allow_invalid_mutual_exclusion.snap
wix/: main.wxs
