[package]
name = "gold_digger"
version = "0.2.5"
edition = "2024"
authors = ["UncleSp1d3r <unclespider@protonmail.com>"]
description = "A simple MySQL/MariaDB query tool that accepts parameters as environmental variables."
readme = "README.md"
repository = "https://github.com/unclesp1d3r/gold_digger"
license = "MIT"
keywords = ["mysql", "query", "tool", "mariadb"]
categories = ["command-line-utilities", "database"]
exclude = [
  ".github/",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  ".editorconfig",
  ".gitignore",
  ".gitlint",
  ".chglog/",
]


[dependencies]
mysql = { version = "26.0.1", features = ["minimal"], default-features = false }
anyhow = "1.0.99"
csv = "1.3.0"
serde_json = "1.0.142"
openssl-sys = { version = "0.9.109", optional = true }
mysql_common = { version = "0.35.5", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false
strip = true
panic = "abort"

[features]
default = ["json", "csv", "ssl", "additional_mysql_types", "verbose"]
json = []
csv = []
ssl = ["openssl-sys", "mysql/native-tls"]
additional_mysql_types = [
  "mysql_common?/bigdecimal",
  "mysql_common?/rust_decimal",
  "mysql_common?/time",
  "mysql_common?/frunk",
]
vendored = ["openssl-sys?/vendored"]
verbose = []
