[package]
name = "gold_digger"
version = "0.2.6"
edition = "2024"
build = "build.rs"
authors = ["UncleSp1d3r <unclespider@protonmail.com>"]
description = "A simple MySQL/MariaDB query tool that accepts parameters as environmental variables."
readme = "README.md"
repository = "https://github.com/unclesp1d3r/gold_digger"
homepage = "https://unclesp1d3r.github.io/gold_digger/"
license = "MIT"
keywords = ["mysql", "query", "tool", "mariadb"]
categories = ["command-line-utilities", "database"]
exclude = [
  ".github/",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  ".editorconfig",
  ".gitignore",
  ".gitlint",
  ".chglog/",
  "WARP.md",
  "GEMINI.md",
  "AGENTS.md",
]

[package.metadata.wix]
upgrade-guid = "1193C717-3A21-4D74-B2FB-D840FC3ECC66"
path-guid = "7641C7C8-5EB9-4BCF-8317-8A21B53B2997"
license = false
eula = false

[package.metadata.cargo-machete]
ignored = ["mysql_common"]

[dependencies]
mysql = { version = "26.0.1", features = ["minimal"], default-features = false }
anyhow = "1.0.99"
csv = "1.3.0"
serde_json = "1.0.143"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
mysql_common = { version = "0.35.5", optional = true }
thiserror = "2.0.16"
url = "2.5.7"

[dev-dependencies]
testcontainers-modules = { version = "0.12.1", features = ["mysql"] }
tempfile = "3.21.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"  # Use fat LTO for maximum performance optimization in distribution builds

[features]
default = ["json", "csv", "ssl", "additional_mysql_types", "verbose"]
json = []
csv = []
ssl = ["mysql/native-tls"] # Platform native TLS (no OpenSSL dependency)
ssl-rustls = ["mysql/rustls-tls"] # Pure Rust TLS implementation
additional_mysql_types = [
  "mysql_common",
  "mysql_common?/bigdecimal",
  "mysql_common?/rust_decimal",
  "mysql_common?/time",
  "mysql_common?/frunk",
]
verbose = []
