[package]
name = "gold_digger"
version = "0.2.6"
edition = "2024"
rust-version = "1.89.0"
build = "build.rs"
authors = ["UncleSp1d3r <unclespider@protonmail.com>"]
description = "A simple MySQL/MariaDB query tool that accepts parameters as environmental variables."
readme = "README.md"
repository = "https://github.com/unclesp1d3r/gold_digger"
homepage = "https://unclesp1d3r.github.io/gold_digger/"
license = "MIT"
keywords = ["mysql", "query", "tool", "mariadb"]
categories = ["command-line-utilities", "database"]
exclude = [
  ".github/",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  ".editorconfig",
  ".gitignore",
  ".gitlint",
  ".chglog/",
  "WARP.md",
  "GEMINI.md",
  "AGENTS.md",
]

[package.metadata.wix]
upgrade-guid = "1193C717-3A21-4D74-B2FB-D840FC3ECC66"
path-guid = "7641C7C8-5EB9-4BCF-8317-8A21B53B2997"
license = false
eula = false

[package.metadata.cargo-machete]
ignored = ["mysql_common", "rustls-native-certs"]

[dependencies]
mysql = { version = "26.0.1", features = ["minimal"], default-features = false }
anyhow = "1.0.99"
csv = "1.3.0"
serde_json = "1.0.143"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
mysql_common = { version = "0.35.5", optional = true }
thiserror = "2.0.16"
url = "2.5.7"
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

[dev-dependencies]
testcontainers-modules = { version = "0.12", features = ["mysql","blocking"] }
tempfile = "3.21"
assert_cmd = "2.0"
insta = "1.43"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"  # Use fat LTO for maximum performance optimization in distribution builds

[features]
default = ["json", "csv", "ssl", "additional_mysql_types", "verbose"]

# Output format support
json = []  # Enable JSON output format with deterministic field ordering
csv = []   # Enable CSV output format with RFC4180 compliance

# TLS/SSL support - rustls-only implementation for consistent cross-platform behavior
ssl = [
  "mysql/rustls-tls",         # MySQL driver with rustls TLS backend using AWS-LC crypto
  "rustls",                   # Pure Rust TLS implementation
  "rustls-native-certs",      # Platform certificate store integration (Windows/macOS/Linux)
  "rustls-pemfile"            # PEM certificate file parsing for custom CA support
]

# Extended MySQL type support for complex data types
additional_mysql_types = [
  "mysql_common",                    # Base MySQL type extensions
  "mysql_common?/bigdecimal",        # High-precision decimal arithmetic
  "mysql_common?/rust_decimal",      # Fixed-point decimal types
  "mysql_common?/time",              # Enhanced date/time handling
  "mysql_common?/frunk",             # Generic programming utilities
]

# Development and debugging support
verbose = []  # Enable detailed logging and diagnostic output

# Integration testing support
integration_tests = []  # Enable heavy integration tests requiring external databases
