[package]
name = "gold_digger"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = { version = "22.1" }
anyhow = "1.0"
csv = "1.1"
openssl-sys = "*"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false

[features]
default = ["vendored"]
vendored = ["openssl-sys/vendored"]
